Added reference to Github repository in papers

--- a/paper/defense/main.tex
+++ b/paper/defense/main.tex
@@ -387,7 +387,11 @@ Possible reasons for inconclusive results:
 \section{Questions}
 \begin{frame}
 \frametitle{Any questions?}
-Thank you for your attention!
+\begin{itemize}
+    \item Thank you for your attention!
+    \item ...
+    \item This research has been made available on Github: \small{\url{https://github.com/maartenpeters/dynamic-models-for-stock-market-behaviour}}
+\end{itemize}
 \end{frame}
 
 % ADDITIONAL SLIDES?
