--- a/paper/original/main.tex
+++ b/paper/original/main.tex
@@ -74,7 +74,7 @@ sorting=ynt
 \begin{abstract}
 % [CHANGE] 
 % Thesis Design
-During the COVID-19 pandemic \cite{velavan2020covid} questions were raised on how to balance government measures ensuring population health and allowing economic development. At the start of the pandemic, Saudi-Arabia and Russia were in a pricing war over crude oil \cite{jacobs2020opec} which, along with speculation on the economic impact of COVID-19, led to a unprecedented negative crude oil price in the West Texas Intermediate (WTI) \cite{CORBET2020104978}. As the WTI serves as a benchmark for crude oil prices in North America, and a proxy for economic development \cite{kaufmann2011role}, it is an interesting candidate to use for price forecasting \cite{YU20082623}. The pandemic provides a unique perspective, as it introduces a new set of variables \cite{dong2020interactive, hale2020variation}, such as COVID-19 infections, deaths, vaccinations and government measures \footnote{Provided by the National Institute for Public Health and the Environment (in Dutch: Rijksinstituut voor Volksgezondheid en Milieu, RIVM), the Johns Hopkins University Coronavirus Resource Center (JHU) and the Oxford COVID-19 Government Response Tracker (OxCGRT).}, that might aid in predicting economic development \cite{chudik2020economic, baldwin2020economics, fernandes2020economic}. Related studies generally focus on macroeconomic development, such as gross domestic product (GDP), unemployment or inflation over years or decades, rather than short-term development over days, weeks or months. This study attempts to combine data from the COVID-19 pandemic, weather, stock pricing data and machine learning techniques to determine the relationship between these variables and their value towards more accurate price forecasting. As stock prices have high variance, extreme values might indicate local or global stock market crashes, an optimal model would be able to predict these crashes. If the model does not explain part of the variance with the added pandemic data, it can be concluded that it does not play a direct role in price development. To determine the outcome of our research question, we compare the value of our data between a baseline model, linear model and two state-of-the-art (SOTA) models, the random forest regressor (RFR) and auto-regressive integrated moving average (ARIMA) model. Studying the effects of the data between 2019 and 2021 we can not achieve a significant result supporting our hypothesis. Both SOTA models tend to perform better or similar with less features, indicating the data does not add value to the prediction of stock market values.
+During the COVID-19 pandemic \cite{velavan2020covid} questions were raised on how to balance government measures ensuring population health and allowing economic development. At the start of the pandemic, Saudi-Arabia and Russia were in a pricing war over crude oil \cite{jacobs2020opec} which, along with speculation on the economic impact of COVID-19, led to a unprecedented negative crude oil price in the West Texas Intermediate (WTI) \cite{CORBET2020104978}. As the WTI serves as a benchmark for crude oil prices in North America, and a proxy for economic development \cite{kaufmann2011role}, it is an interesting candidate to use for price forecasting \cite{YU20082623}. The pandemic provides a unique perspective, as it introduces a new set of variables \cite{dong2020interactive, hale2020variation}, such as COVID-19 infections, deaths, vaccinations and government measures \footnote{Provided by the National Institute for Public Health and the Environment (in Dutch: Rijksinstituut voor Volksgezondheid en Milieu, RIVM), the Johns Hopkins University Coronavirus Resource Center (JHU) and the Oxford COVID-19 Government Response Tracker (OxCGRT).}, that might aid in predicting economic development \cite{chudik2020economic, baldwin2020economics, fernandes2020economic}. Related studies generally focus on macroeconomic development, such as gross domestic product (GDP), unemployment or inflation over years or decades, rather than short-term development over days, weeks or months. This study attempts to combine data from the COVID-19 pandemic, weather, stock pricing data and machine learning techniques to determine the relationship between these variables and their value towards more accurate price forecasting. As stock prices have high variance, extreme values might indicate local or global stock market crashes, an optimal model would be able to predict these crashes. If the model does not explain part of the variance with the added pandemic data, it can be concluded that it does not play a direct role in price development. To determine the outcome of our research question, we compare the value of our data between a baseline model, linear model and two state-of-the-art (SOTA) models, the random forest regressor (RFR) and auto-regressive integrated moving average (ARIMA) model. Studying the effects of the data between 2019 and 2021 we can not achieve a significant result supporting our hypothesis. Both SOTA models tend to perform better or similar with less features, indicating the data does not add value to the prediction of stock market values.\footnote{An overview of the code, documentation and data collected and/or produced during this research has been made available on Github: \url{https://github.com/maartenpeters/dynamic-models-for-stock-market-behaviour.git}}
 % Thesis Design
 \end{abstract}
 
