Small change to evaluation in accordance to the ICCMS 2022 review

--- a/paper/iccms/thesis/5_conclusions.tex
+++ b/paper/iccms/thesis/5_conclusions.tex
@@ -4,6 +4,7 @@ When viewing the results compared to the baseline model, better performance was 
 In light of related work, this could be due to the methodology of automated model fitting and tuning. Previous studies of forecasting models generally approach these tasks as an iterative process, where a single model is developed on very specific data with large amounts of manual tuning. In these results large parts of the test scores already needed to be discarded due to obvious fitting errors caused by noise in the data, preprocessing or failures of the code. Where EDA showed there was potential in the data and models, when implemented on a larger scale it shows that without manual intervention, these models do not generalize. This was somewhat expected, as other related work already showed that stock market prediction relies on domain knowledge or technical analysis. % The EMH states that with asset prices reflecting all available information, there is no possible way of outperforming the market as asset prices only react to new information. 
 As the COVID-19 pandemic was new information at the end of 2019, there was a consequential dip in oil futures and related assets, which set the precedent of the pandemic becoming old information. Also it was clear that this dip in oil futures was a result of compounding events rather than just an effect of the pandemic. Another possible explanation for the insignificant results is that there is no causal relationship between our features. Although publicly available data could've influenced the behavioural psychology of traders, this is a relationship primarily determined by the traders' psychology and only has a secondary relation to this study's data. As businesses moved to working remotely from their employees homes, lockdown effects were overcome for most industries and the effect on the economy was consequently negated. Along with quick developments in vaccines, this could've led traders to the conclusion that the pandemic was of little importance after the first wave of infections. These developments were mostly covered in news stories, which are difficult to quantify, but are generally the main source of information for traders. Any relationship with pandemic information is probably only visible on long term analysis, where events on the stock market accumulate over time and variance decreases.
 Although technology has come a long way, and SOTA machine learning models have shown promise in varying fields of expertise, it is clear that these models do not learn 'automatically'. A lot of expertise is needed to properly fit and tune a model to very specific data and only then can it be considered as a viable solution for the specific problem in mind. Generalization of models is acquired by training with large amounts of data, but only when the model in question can do the same on very specific data. For instance, models that perform character recognition in images can generalize to other tasks, such as object classification, however this comes with complex engineering of the models and large amounts of prepared data. In this case, the EDA showed promise on prediction models combined with pandemic data. And with large amounts of fitting, tuning and engineering of a single model it might still be possible to achieve a significant result. Still, generalization of such models comes with large volumes of data and preparation, and only when a precedent is set research can work towards a more general solution. In this research experiments were performed with different models, such as Xgboost, but from sample fittings it was clear it would not outperform RFR without additional data or proper manual tuning.
+When reviewing our selection of control, or baseline model and other prediction models, the research also admits that there might have been more appropriate models available at the time of writing. If this study would be revisited, one would do right to reconsider the model selection along with possible different error metrics.
 
 \section{Conclusions}
 \label{sec:conc}
